[gd_scene load_steps=12 format=3 uid="uid://8xyclhd4xvkd"]

[ext_resource type="Script" uid="uid://c2qt3wjbxvs5x" path="res://scripts/character_body_3d.gd" id="1_6d34t"]
[ext_resource type="PackedScene" uid="uid://brx6pt7btg1np" path="res://characters/ROBOT.blend" id="2_vo25f"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7r8qw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mx1mw"]

[sub_resource type="Animation" id="Animation_3n76q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_mx1mw"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.1, 0, 0.1)]
}

[sub_resource type="Animation" id="Animation_8guhg"]
resource_name = "take_damage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0769369, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.314159, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8guhg"]
_data = {
&"RESET": SubResource("Animation_3n76q"),
&"die": SubResource("Animation_mx1mw"),
&"take_damage": SubResource("Animation_8guhg")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mx1mw"]
velocity_pivot = Vector3(0, 20, 0)
direction = Vector3(-0.84, 20, 0)
initial_velocity_min = 3.0
initial_velocity_max = 65.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3n76q"]
emission_enabled = true
emission = Color(0.909804, 0.129412, 0.164706, 1)
emission_energy_multiplier = 8.0

[sub_resource type="SphereMesh" id="SphereMesh_8guhg"]
material = SubResource("StandardMaterial3D_3n76q")
radius = 0.02
height = 0.03

[node name="CharacterBody3D" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 25
collision_mask = 9
script = ExtResource("1_6d34t")

[node name="Node3D" type="Node3D" parent="."]

[node name="ROBOT" parent="Node3D" instance=ExtResource("2_vo25f")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 6.61688, 0)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-3.5, 0, -3.0598e-07, 0, 3.5, 0, 3.0598e-07, 0, -3.5, 0, 4.43537, 0.267899)
shape = SubResource("CapsuleShape3D_7r8qw")

[node name="detector" type="Area3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="detector"]
transform = Transform3D(-4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, 0, 4.64026, -2.79)
polygon = PackedVector2Array(0, 10, 50, 25, 50, -25, 0, -10)

[node name="Area3D" type="Area3D" parent="." groups=["bullet"]]
collision_layer = 9
collision_mask = 9

[node name="hurt_zone" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(4.44, 0, 0, 0, 4.44, 0, 0, 0, 4.44, 0, 4.61646, 0)
shape = SubResource("CapsuleShape3D_mx1mw")
debug_color = Color(0.972549, 0, 0, 1)

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.0522, -2.54103)
target_position = Vector3(0, 0, -44)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8guhg")
}

[node name="Timer" type="Timer" parent="."]

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.98357, -0.203657)
layers = 9
emitting = false
amount = 25
one_shot = true
explosiveness = 0.72
process_material = SubResource("ParticleProcessMaterial_mx1mw")
draw_pass_1 = SubResource("SphereMesh_8guhg")

[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
